Can Deactivate for articles

--- a/src/app/article-composer/article-composer.component.html
+++ b/src/app/article-composer/article-composer.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar sticky-top navbar-toggleable-md navbar-inverse bg-faded nav" onunload="areYouSure();">
-  <a class="navbar-brand" routerLink="/newsfeed">
+<nav class="navbar sticky-top navbar-toggleable-md navbar-inverse bg-faded nav">
+  <a class="navbar-brand">
     <img src="../../assets/img/LazsocWhiteLogo.png" width="auto" height="105" class="ml-3" alt="">
   </a>
   <div class="collapse navbar-collapse">
