--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,127 @@
-<div class="container-fluid mt-3">
-	<h1>The fun outside the classroom!</h1>
+<div class="container-fluid">
+	<div class="first-row row justify-content-center">
+		<div style="text-align: center; width:50%">
+			<h1>The fun outside the classroom</h1>
+			<div class="subtext">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dignissim odio quis orci pellentesque molestie.
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img class="d-block carousel-img" src="assets/img/banners/LinkBanner.png" alt="First slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block carousel-img" src="assets/img/banners/TapBanner.png" alt="Second slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block carousel-img" src="assets/img/banners/JdccBanner.png" alt="Third slide">
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+	</div>
+	<div class="row mt-5" id="experience" style="position:relative">
+		<div>
+			<img src="assets/img/LandingGraphic1.jpeg" class="graphic" style="float:right">
+			<div class="text-container" style="margin-left:40px">
+				<h1>Experience what works best for you</h1>
+				<span class="subtext">Lazaridis students get a chance to see their work come to life. Focusing in on the why you get a chance to try new things in a hands on appraoch to see what works best for you. Through your experiences you will develop new skills, __, and friendships that will last a lifetime. Putting your best foot forward, bring your ideas to life and leave behind that positive legacy.</span>
+			</div>
+		</div>
+	</div>
+	<div class="row" id="community" style="position:relative">
+		<div>
+			<img src="assets/img/LandingGraphic2.jpeg" class="graphic" style="float:left; width: 65%">
+			<div class="text-container" style="margin-left:-8%">
+				<h1>Experience what works best for you</h1>
+				<span class="subtext">With one of the smallest campuses in Ontario, the Lazaridis community is known to have the strongest and tight knit culture. Being a Lazaridis student, you are able to surround yourself with ambitious like minded students that push you past your comfort zone and help you persue your passions. You get the oppurunity to inspire the lives of the generation that comes next by leading by example.</span>
+			</div>
+		</div>
+	</div>
+	<div class="row" id="passion" style="position:relative">
+		<div>
+			<img src="assets/img/LandingGraphic3.jpeg" class="graphic" style="float:right">
+			<div class="text-container" style="margin-left:40px">
+				<h1>Experience what works best for you</h1>
+				<span class="subtext">Our school is the perfect place to find who you are, who you want to become and discover what you enjoy most. With a low stake environment you will be able to explore all your interests learning from all the ups and downs along the way. Passion is the engine that drives the Lazaridis community and our community will help you find what you love. Whatever you may be interested in, LazSoc is here to help you dive into it.</span>
+			</div>
+		</div>
+	</div>
+	<div class="row selector-container justify-content-center">
+		<div class="d-flex flex-row three-cols-div pointer">
+			<div class="three-col col-left align-self-center ml-1" (click)="activeCol = 'beans'" [ngClass]="{active:activeCol == 'beans'}">
+				<div class="mt-1">LazBeans</div>
+			</div>
+			<div class="three-col col-mid align-self-center mx-1" (click)="activeCol = 'discount'" [ngClass]="{active:activeCol == 'discount'}">
+				<div class="mt-1">Discount Program</div>
+			</div>
+			<div class="three-col col-right align-self-center mr-1" (click)="activeCol = 'events'" [ngClass]="{active:activeCol == 'events'}">
+				<div class="mt-1">Club Events</div>
+			</div>
+		</div>
+	</div>
+	<div class="row justify-content-center">
+		<div class="selector-content">
+			<div class="d-flex flex-row beans-content" *ngIf="activeCol == 'beans'">
+				<img src="assets/img/Coffee-Cups.png">
+				<div style="margin-top:5%">
+					<h1>Build meaningful connections</h1>
+					<div class="subtext">Our school is the perfect place to find who you are, who you want to become and discover what you enjoy most. With a low stake environment you will be able to explore all your interests learning from all the ups and downs along the way. Passion is the engine that drives the Lazaridis community and our community will help you find what you love.</div>
+					<div class="gold-button mt-4">
+						Check it out
+					</div>
+				</div>
+			</div>
+			<div class="d-flex flex-row beans-content" *ngIf="activeCol == 'discount'">
+				<img src="assets/img/Discount-Cards.png">
+				<div style="margin-top:5%">
+					<h1>Build meaningful connections</h1>
+					<div class="subtext">Our school is the perfect place to find who you are, who you want to become and discover what you enjoy most. With a low stake environment you will be able to explore all your interests learning from all the ups and downs along the way. Passion is the engine that drives the Lazaridis community and our community will help you find what you love.</div>
+					<div class="gold-button mt-4">
+						Check it out
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row our-clubs justify-content-center">
+		<img src="assets/img/Clubs-Left.png">
+		<div class="mx-4 align-self-center" style="width:34%; text-align:center">
+			<h1>23 Student-Run Clubs, Associations and Committees</h1>
+			<div class="subtext">Our school is the perfect place to find who you are, who you want to become and discover what you enjoy most. With a low stake environment you will be able to explore all your interests learning from all the ups and downs along the way. Passion is the engine that drives the Lazaridis community and our community will help you find what you love.</div>
+			<div class="gold-button mt-4 mx-auto">
+				Check it out
+			</div>
+		</div>
+		<img src="assets/img/Clubs-Right.png">
+	</div>
+	<div class="row final-panel justify-content-center">
+		<img src="assets/img/Laz-Hall.jpg">
+		<div class="final-panel-text-div">
+			<div class="final-panel-heading">Don't miss out!</div>
+			<div class="final-panel-subtext">Sign up here and stay on top</div>
+			<div class="d-flex flex-row justify-content-center mt-3">
+				<div class="signup-box pt-2 pl-3">
+					abcd1234@mylaurier.ca
+				</div>
+				<div class="gold-button ml-3">Born Ready</div>
+			</div>
+		</div>
+	</div>
+	<div class="row footer-panel justify-content-center">
+		<div class="align-self-center">
+			<div>Follow us @LazSoc</div><br>
+			<div>© 2018, Made with ♥ by LazSoc</div>
+		</div>
+	</div>
 </div>
