--- a/src/app/hiring/hiring.component.html
+++ b/src/app/hiring/hiring.component.html
@@ -6,7 +6,7 @@
       <span class="banner-subtext">The fun outside the classroom</span>
     </div>
   </div>
-  <div class="card pointer">
+  <div class="card pointer mb-4">
     <div class="card-body py-0">
       <ul class="list-group list-group-flush">
         <li class="list-group-item pointer" *ngFor="let posting of jobPostings" (click)="onSelect(posting)">
