--- a/src/app/nav-bar/laz-navbar.css
+++ b/src/app/nav-bar/laz-navbar.css
@@ -7,6 +7,7 @@
 }
 .gold-bar {
   /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.1);*/
+  position:absolute;
   background-color:#F2A900;
   height:8px;
   position: -webkit-sticky;
