--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-toggleable-md navbar-inverse bg-faded nav" style="background-color:rgba(66,44,137,1); height:70px">
+<nav class="navbar navbar-expand-md navbar-dark sticky-top bg-faded nav" style="background-color:rgba(66,44,137,1); height:70px">
   <a class="navbar-brand" routerLink="/newsfeed">
     <img src="../../assets/img/LazsocWhiteLogo.png" width="auto" height="105" class="ml-3" alt="">
   </a>
@@ -7,12 +7,6 @@
       <li class="nav-item mr-4">
         <a class="nav-link" routerLink="/clubs/2" routerLinkActive="active">ABOUT US</a>
       </li>
-<!--       <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$)">
-        <a class="nav-link" routerLink="/compose" target="_blank" routerLinkActive="active">COMPOSE</a>
-      </li> -->
-<!--       <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$)">
-        <a class="nav-link" routerLink="/beans" routerLinkActive="active">LAZBEANS</a>
-      </li> -->
       <li class="nav-item mr-4" style="cursor:pointer">
         <a class="nav-link" routerLink="/resources" routerLinkActive="active">RESOURCES</a>
       </li>
