--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -23,9 +23,9 @@
       </div>
       <div *ngIf="!anyEvents">
         <div class="card-body">
-          <span class="none-found">There are no events this week</span>
+          <span class="text-md-grey">There are no events this week</span>
         </div>
       </div>
   </div>
-  <span class="made-with-love">Made with <span style="color:red">❤</span> by Lazaridis Students’ Society © 2017</span>
+  <span class="made-with-love">Made with <span style="color:red">❤</span> by Lazaridis Students’ Society © 2018</span>
 </div>
