--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -31,7 +31,7 @@
       		</div>
       		<br>
 		      <div class="card mt-1" *ngIf="!isCommentActive && authService.userSignedIn$" (click)="toggleCommentActive()" style="cursor:pointer">
-		      	<div class="card-block d-flex flex-row">
+		      	<div class="card-body d-flex flex-row">
 		      		<img [src]="authService.currentUser.image" *ngIf="authService.currentUser.image != null" class="avatar mr-3">
 		      		<img src="assets/img/Blank Avatar.jpg" *ngIf="authService.currentUser.image == null" class="avatar mr-3">
 		      		<span class="comment-placeholder mt-3">Join the discussion</span>
