--- a/src/app/newsfeed-container/newsfeed-container.component.html
+++ b/src/app/newsfeed-container/newsfeed-container.component.html
@@ -9,7 +9,7 @@
       <div *ngIf="!authService.userSignedIn$" class="sticky-signup">
         <profile-sidebar></profile-sidebar>
       </div>
-      <div class="card sticky" style="border:none" *ngIf="authService.userSignedIn$">
+      <div class="sticky" style="border:none" *ngIf="authService.userSignedIn$">
         <profile-sidebar></profile-sidebar>
         <div>
           <ul class="list-group" style="border: 1px solid lightgrey; border-radius:0">
@@ -24,12 +24,12 @@
       <button class="btn compose" *ngIf="authService.userSignedIn$"><a routerLink="/compose" target="_blank" style="cursor:pointer">Write something!</a></button>
     </div>
     <div class="col-sm-5 col-md-5 col-lg-5 px-2 mt-2">
-<!--       <div class="d-flex flex-row mt-3">
+      <div class="d-flex flex-row mt-3">
         <input class="search-bar" id="exampleInputEmail1">
         <div class="search-button">
           <span class="search-text center-align">Search</span>
         </div>
-      </div> -->
+      </div>
       <div class="d-flex flex-row mt-3 justify-content-left">
         <span class="filters-text mx-2 mt-1" style="font-family:Lato-Bold">Filters:</span>
         <div class="dropdown m-0 p-0">
