--- a/src/app/sidebar/hiring-sidebar.html
+++ b/src/app/sidebar/hiring-sidebar.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card sticky">
   <h3 class="card-header card-header-text">Open Positions</h3>
   <div class="card-body py-0" *ngIf="hasPostings">
     <ul class="list-group list-group-flush pointer" *ngFor="let posting of jobPostings; let i = index">
