--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -3,8 +3,11 @@
   <img src="assets/img/Blank Avatar.jpg" class="profile-avatar mr-2" routerLink="/profile/{{tokenService.currentUserData.id}}">
   <div class="card-header d-flex align-items-center py-2" routerLink="/profile/{{tokenService.currentUserData.id}}"> -->
   <img src="assets/img/cover-photo.jpeg" style="height:100px" class="card-image-top">
-  <img src="assets/img/Blank Avatar.jpg" class="profile-avatar mr-2" *ngIf="!currentUser.image">
-  <img [src]="currentUser.image" class="profile-avatar mr-2" *ngIf="currentUser.image">
+  
+  <div class="profile-avatar mr-2">
+    <img [src]="currentUser.image" *ngIf="currentUser.image">
+    <img src="assets/img/Blank Avatar.jpg" *ngIf="!currentUser.image">
+  </div>
   <div class="card-header d-flex align-items-center py-2">
     <div class="d-flex flex-column" style="transform:translate(4.5em,0); cursor:pointer">
       <h4 class="profile-name my-0">{{currentUser.first_name}} {{currentUser.last_name}}</h4>
