--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="hasEvents">
-  <div *ngFor="let event of events" style="margin-bottom:1rem">
+  <div *ngFor="let event of clubEvents" style="margin-bottom:1rem">
     <div *ngIf="matchesFilters(event)">
     <!-- <span class="event-divider mt-4">{{object.val.divider}}</span><hr/> -->
       <div class="card mt-3" (click)="viewEvent(event)" style="cursor:pointer">
@@ -59,5 +59,11 @@
   </div>
   <div class="card-body">
       <span class="club-detail-text">Sorry, this club doesn't appear to have any events</span>
+  </div>
+</div>
+<div class="card mt-4" style="border-top:1px" *ngIf="clubEvents.length == 0 && hasEvents">
+  <div class="card-body py-4" style="text-align:center">
+    <div class="club-title">No events in the summer :(</div>
+    <span class="card-datetime">We'll have everything posted once school starts back up in the fall, so check back then!</span>
   </div>
 </div>
