--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -17,7 +17,7 @@
 </div>
 <div class="card" *ngIf="!(authService.userSignedIn$)">
   <div class="card-body" style="text-align:center">
-    <img src="assets/img/icons/Profile.svg" style="width:40%">
+    <img src="assets/img/Blank Avatar.jpg" style="width: 90px; height: 90px; border-radius: 50%;">
     <br>
     <span class="join-the-community">Join the Community</span><br>
     <span class="signup-subheader">Get unlimited access to all Lazsoc has to offer</span>
