--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -23,22 +23,32 @@
               <div class="row justify-content-center">
                 <div class="col-lg-6 mb-3">
                   <label for="firstname">First Name</label>
-                  <input type="email" class="form-control mb-3" id="firstname" name="firstname" [(ngModel)]="updateObj.first_name" >
+                  <input type="text" class="form-control mb-3" id="firstname" name="firstname" [(ngModel)]="updateObj.first_name" >
                 </div>
                 <div class="col-lg-6 mb-3">
                   <label for="firstname">Last Name</label>
-                  <input type="email" class="form-control mb-3" id="lastname" name="lastname" [(ngModel)]="updateObj.last_name" >
+                  <input type="text" class="form-control mb-3" id="lastname" name="lastname" [(ngModel)]="updateObj.last_name" >
                 </div>
               </div>
 
               <div class="row justify-content-center">
                 <div class="col-lg-6 mb-3">
                   <label for="firstname">School Program</label>
-                  <input type="email" class="form-control mb-3" name="program" [(ngModel)]="updateObj.program">
+                  <input type="text" class="form-control mb-3" name="program" [(ngModel)]="updateObj.program">
                 </div>
                 <div class="col-lg-6 mb-3">
                   <label for="firstname">School Year</label>
-                  <input type="email" class="form-control mb-3" name="schoolyear" style="width: 30%" [(ngModel)]="updateObj.school_year">
+                  <input type="text" class="form-control mb-3" name="schoolyear" style="width: 30%" [(ngModel)]="updateObj.school_year">
+                </div>
+              </div>
+              <div class="row justify-content-left" >
+                <div class="col-lg-6 mb-3">
+                  <label for="firstname">Student Number</label>
+                  <input type="text" class="form-control mb-3" id="student_id" name="student_id" [(ngModel)]="updateObj.student_id" >
+                </div>
+                <div class="col-lg-6 mb-3" *ngIf="updateObj.hasOwnProperty('email')">
+                  <label for="firstname">Email</label>
+                  <input type="text" class="form-control mb-3" id="email" name="email" [(ngModel)]="updateObj.email" readonly>
                 </div>
               </div>
               <label for="summary">What's your story?</label><br>
