--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -13,6 +13,9 @@
       <li class="nav-item mr-4" style="cursor:pointer">
         <a class="nav-link" routerLink="/resources" routerLinkActive="active">Resources</a>
       </li>
+      <li class="nav-item mr-4" style="cursor:pointer">
+        <a class="nav-link" routerLink="/beans" routerLinkActive="active">Beans</a>
+      </li>
       <li class="nav-item dropdown mr-3" style="cursor:pointer">
         <a class="nav-link dropdown-toggle" id="getInvolvedDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Get Involved
