CSS updates for Beans page

--- a/src/app/beans/beans.component.html
+++ b/src/app/beans/beans.component.html
@@ -16,12 +16,14 @@
             <div class="invite-button mt-3"><span>Invite</span></div>
             <hr>
             <div class="d-flex flex-wrap mt-4 justify-content-center">
+
+<!--             <div class="d-flex flex-wrap mt-4 justify-content-center">
               <div class="tags-label m-1"><span>Technology</span></div>
               <div class="tags-label m-1"><span>Design</span></div>
               <div class="tags-label m-1"><span>UX</span></div>
               <div class="tags-label m-1"><span>Entrepreneurship</span></div>
               <div class="tags-label m-1"><span>Finance</span></div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
