--- a/src/app/beans/beans.component.css
+++ b/src/app/beans/beans.component.css
@@ -6,11 +6,11 @@
 .avatar {
   display: block;
   position:absolute;
-  transform: translate(74%, -50%);
+  transform: translate(75%, -30%);
   width: 40%;
   height:auto;
   border-radius: 50%;
-  border:2px solid white;
+  border:4px solid white;
 }
 .card-body {
   text-align: center;
@@ -53,12 +53,11 @@
   border:0 solid #efefef;
   border-radius:5px;
   min-width: 30px;
+  font-family:Lato-Regular;
+  font-size:12px;
+  color:#83868a;
 }
 
 .tags-label span {
-  font-family:Lato-Light;
-  font-size:10px;
-  color:#83868a;
-  letter-spacing:0;
-  text-align:left;
+  margin-top:100%;
 }
