--- a/src/app/beans/beans.component.html
+++ b/src/app/beans/beans.component.html
@@ -7,20 +7,21 @@
     </div>
     <div class="col-sm-8 col-md-8 col-lg-8">
       <div class="d-flex flex-wrap">
-        <div class="card bean-card mx-1" style="margin-top:5%" routerLink="/profile/{{bean.id}}" *ngFor="let bean of beans">
-          <img [src]="bean.image" class="avatar" *ngIf="bean.image">
+        <div class="card bean-card mx-1" style="margin-top:4%" routerLink="/profile/{{bean.id}}" *ngFor="let bean of beans">
+          <img [src]="bean.image" class="avatar pointer" *ngIf="bean.image">
           <img src="assets/img/Blank Avatar.jpg" class="avatar" *ngIf="!bean.image">
-          <div class="card-body" style="padding-top:20%">
-            <span class="profile-name">{{bean.first_name}}&nbsp;{{bean.last_name}}</span><br>
+          <div class="card-body" style="padding-top:30%">
+            <span class="profile-name pointer">{{bean.first_name}}&nbsp;{{bean.last_name}}</span><br>
             <span class="profile-subheading">Laurier BBA Student</span>
-            <div class="invite-button mt-4"><span>Invite</span></div>
-<!--             <div class="d-flex flex-wrap mt-4 justify-content-center">
+            <div class="invite-button mt-3"><span>Invite</span></div>
+            <hr>
+            <div class="d-flex flex-wrap mt-4 justify-content-center">
               <div class="tags-label m-1"><span>Technology</span></div>
               <div class="tags-label m-1"><span>Design</span></div>
               <div class="tags-label m-1"><span>UX</span></div>
               <div class="tags-label m-1"><span>Entrepreneurship</span></div>
               <div class="tags-label m-1"><span>Finance</span></div>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
