--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,7 +1,7 @@
 .profile-img {
   display: block;
   position:absolute;
-  transform:translate(175%,50%);
+  transform:translate(170%,-60%);
   width:22%;
   height:auto;
   border-radius:50%;
@@ -27,8 +27,9 @@
 .card-img-top {
   display: block;
   width: 100%;
-  height: auto;
-  border-radius:0;
+}
+.card-body {
+  text-align:center;
 }
 .program {
   font-family:Lato-Regular;
@@ -43,12 +44,11 @@
   font-size:16px;
   color:#83868a;
   letter-spacing:0;
-  text-align:left;
 }
-.club-detail-text {
-  font-family:Lato-Medium;
-  font-size:13px;
-  color: black;
-  letter-spacing:0;
-  text-align:left;
+.biography-text {
+  color: #83868A;
+  font-family: Lato-Regular;
+  font-size: 12px;
+  width:60%;
+  margin:auto;
 }
