--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -1,10 +1,8 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-sm-9 col-md-9 col-lg-9">
-      <div class="d-flex flex-row">
-        <h2 class="card card-title card-body mt-4 mb-0">Personal Information</h2>
-      </div>
-      <div class="card mt-0">
+      <div class="card mt-3">
+        <h2 class="card-header mb-0">Personal Information</h2>
         <div class="card-body">
           <div class="form-group">
             <div class="d-flex flex-row justify-content-center">
@@ -52,7 +50,7 @@
                 </div>
               </div>
               <label for="summary">What's your story?</label><br>
-              <textarea class="textarea" rows="3" name="story" [(ngModel)]="updateObj.summary"></textarea>
+              <textarea rows="5" name="story" [(ngModel)]="updateObj.summary"></textarea>
               <div style="text-align:center" *ngIf="hasErrors"><span class="some-fields-blank">Please enter your name before submitting</span></div>
               <div class="d-flex flex-row justify-content-center mb-4">
                 <button type="submit" class="btn submit-btn mt-2" name="button" (click)="postUpdates()">Submit!</button>
@@ -63,4 +61,50 @@
       </div>
     </div>
   </div>
+  <div class="row justify-content-center mt-3">
+    <div class="col-9">
+      <div class="card mb-3" *ngFor="let exp of work_experiences_attributes; let i = index">
+        <h2 class="card-header"> Work Experience </h2>
+        <div class="card-body">
+          <div class="form-group">
+            <form class="mt-3 mb-2">
+              <div class="row justify-content-center">
+                <div class="col-lg-6 mb-3">
+                  <label for="firstname">Company</label>
+                  <input type="text" class="form-control mb-3" id="firstname" name="firstname" [(ngModel)]="exp.company" >
+                </div>
+                <div class="col-lg-6 mb-3">
+                  <label for="firstname">Title</label>
+                  <input type="text" class="form-control mb-3" id="lastname" name="lastname" [(ngModel)]="exp.title" >
+                </div>
+              </div>
+
+              <div class="row justify-content-center pb-0">
+                <div class="col-6 mb-3">
+                  <label for="firstname">Start Date</label>
+                  <input type="date" class="form-control mb-3" name="program" [(ngModel)]="exp.started_date">
+                </div>
+                <div class="col-3 mb-3">
+                  <label for="firstname">End Date</label>
+                  <input type="date" class="form-control mb-3" name="schoolyear" [(ngModel)]="exp.end_date">
+                </div>
+                <div class="col-3 align-self-center">
+                  <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" data-toggle="toggle" [(ngModel)]="exp.is_current">
+                    I currently work here
+                  </label>
+                </div>
+              </div>
+              <label for="summary">Job Highlights</label><br>
+              <textarea rows="5" name="story" [(ngModel)]="exp.summary"></textarea>
+            </form>
+          </div>
+          <button type="button" class="btn btn-primary" (click)="addWorkExp()">Add more work experience</button>
+          <button type="button" class="btn btn-danger" (click)="removeWorkExp(i)" *ngIf="i > 0">Remove Work Experience</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+
