--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -12,12 +12,33 @@
             <h2 class="name-font">{{user.first_name}} {{user.last_name}}</h2>
             <h2 class="program">{{user.program}}</h2>
           </div>
-          <hr width="60%">
+          <hr width="70%">
           <div class="biography-text">
             {{user.summary}}
           </div>
         </div>
       </div>
+      <div class="row justify-content-center mt-2">
+        <div class="col-4 pr-1">
+          <div class="card">
+            <div class="card-body">
+              
+            </div>
+          </div>
+        </div>
+        <div class="col-8 pl-1">
+          <div class="card">
+            <div class="card-header card-header-text">About</div>
+            <div class="card-body">
+              <span class="card-title">Experience</span>
+              <div>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
 </div>
