Fix the stretched banner at the bottom of the landing page

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -119,8 +119,8 @@
 		</div>
 		<img src="assets/img/Clubs-Right.png">
 	</div>
-	<div class="row final-panel justify-content-center">
-		<img src="assets/img/FullTeam19.jpeg" style="height:100%">
+	<div class="row final-panel justify-content-center" style="height:auto">
+		<img src="assets/img/FullTeam19.jpeg" style="width:100%">
 		<div class="final-panel-text-div">
 			<div class="final-panel-heading">Don't miss out!</div>
 			<div class="final-panel-subtext">Sign up here and stay on top</div>
